# Project1-Hermes-TTS-Agent

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  PROJECT_AUDIT_AND_IMPROVEMENT_PLAN.md  PROJECT_STRUCTURE.md  Project Requirements Specification.md  docker-compose.yml  project_request.md  新建文本文档.txt
.claude/: settings.local.json
backend/: .env.example  Dockerfile  __init__.py  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  router.py  state.py
backend/app/: main.py
backend/app/agents/: __init__.py  analyst.py  misc_agent.py  orchestrator.py  reporter.py  schema_agent.py  security.py  skills.py  sql_coder.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  approve.py  chat.py  datasource.py  export.py  stop.py
backend/app/core/: __init__.py  config.py  llm.py
backend/app/db/: session.py
backend/app/db/dialects/: __init__.py  mysql.py  oracle.py  postgresql.py  sqlserver.py
backend/app/graph/: __init__.py  checkpointer.py  state.py  workflow.py
backend/app/rag/: __init__.py  embeddings.py  knowledge.py  retriever.py
backend/app/utils/: json_encoder.py
backend/config/: settings.py
backend/models/: __init__.py  config.py  database.py  schemas.py
backend/tests/: test_agents.py  test_api.py
backend/utils/: __init__.py  logger.py
docs/: index.md  package.json
docs/.vitepress/: config.mts
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
init-scripts/: mysql-init.sql  postgres-init.sql
scripts/: init_db.sql  start-dev.sh
(+25 files in other folders)
