[project]
name = "data-agent"
version = "0.1.0"
description = "Data Agent Pro - Backend Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "langchain-huggingface>=1.0.0,<2.0.0",
    "langgraph-checkpoint-redis==0.4.1",
    "deepagents>=0.5.0,<0.6.0",
    "sqlalchemy>=2.0.0",
    "asyncmy>=0.2.0",
    "asyncpg>=0.30.0",
    "pymilvus>=2.5.0",
    "redis>=5.0.0",
    "sse-starlette>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "loguru>=0.7.3",
    "langchain-openai>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[project.scripts]
data-agent = "app.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
